--- a/templates/perfil/perfil.html.twig
+++ b/templates/perfil/perfil.html.twig
@@ -55,6 +55,7 @@
       <td>{{user.competicionesganadas}}</td>
       <td>{{user.victorias}}</td>
       <td>{#user.sanciones#}</td>
+      
         {% endfor %}
     {% else %}
       <td>no data</td>
@@ -67,7 +68,17 @@
   </tbody>
 </table> 
 
-<a class="btn btn-lg btn-primary" type="submit" href="{{ path('equipo_new') }}">Mi Equipo</a>
+{#<a class="btn btn-lg btn-primary" type="submit" href="{{ path('equipo_new') }}">Mi Equipo</a>#}
+{% if users  %}
+  {% for user in users %}
+    <a class="btn btn-lg btn-primary" type="submit" href="{{ path ('delete_user', {'username': user.username})}}">Delete</a>
+   
+  {% endfor %}
+{% endif %}
 {#<a class="btn btn-lg btn-primary" type="submit" href="{{  }}">Mis Campeonatos</a>#}
 <div>
+{% endblock %}
+
+{% block javascripts %}
+  <script src="/js/main.js"></script>
 {% endblock %}
