--- a/templates/perfil/perfil.html.twig
+++ b/templates/perfil/perfil.html.twig
@@ -5,10 +5,9 @@
 {% block body %}
 <div>
 <table class="table table-hover">
-<div><h4>Datos de Jugador</h4>
+<div><h4>Perfil</h4>
   <thead>
     <tr>
-      <th scope="col">foto de perfil</th>
       <th scope="col">mail</th>
       <th scope="col">usuario</th>
       <th scope="col">equipo</th>
@@ -19,10 +18,9 @@
     <tr class="table-info">
     {% if users  %}
       {% for user in users %}
-        <td>{#imagen#}</td>
         <td>{{user.email}}</td>
         <td>{{user.username}}</td>
-        <td>{#user.equipo#}</td>
+        <td></td>
       {% endfor %}
     {% else %}
       <td>no data</td>
@@ -68,14 +66,14 @@
   </tbody>
 </table> 
 
-{#<a class="btn btn-lg btn-primary" type="submit" href="{{ path('equipo_new') }}">Mi Equipo</a>#}
+{#<a class="btn btn-lg btn-primary" type="submit" href="{{ path('equipo_new') }}">Mi Equipo</a>
 {% if users  %}
   {% for user in users %}
     <a class="btn btn-lg btn-primary" type="submit" href="{{ path ('delete_user', {'username': user.username})}}">Delete</a>
    
   {% endfor %}
 {% endif %}
-{#<a class="btn btn-lg btn-primary" type="submit" href="{{  }}">Mis Campeonatos</a>#}
+<a class="btn btn-lg btn-primary" type="submit" href="{{  }}">Mis Campeonatos</a>#}
 <div>
 {% endblock %}
 
