--- a/templates/campeonatos/show.html.twig
+++ b/templates/campeonatos/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>Campeonato</th>
-                <td>{{ campeonato.campeonato }}</td>
+               {#<td>{{ campeonato.campeonato }}</td>#}
             </tr>
             <tr>
                 <th>Juego</th>
@@ -21,11 +21,11 @@
             </tr>
             <tr>
                 <th>Pruebas</th>
-                <td>{{ campeonato.pruebas }}</td>
+                {#<td>{{ campeonato.pruebas }}</td>#}
             </tr>
             <tr>
                 <th>Participantes</th>
-                <td>{{ campeonato.participantes }}</td>
+                {#<td>{{ campeonato.participantes }}</td>#}
             </tr>
         </tbody>
     </table>
