--- a/templates/perfil/ajustes.html.twig
+++ b/templates/perfil/ajustes.html.twig
@@ -1,6 +1,17 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}ajustes{% endblock %}
 
 {% block body %}
-   
+    <form method="post">
+        <label for="inputEmail">Email</label><br>
+        <input type="email" name="email" id="inputEmail" class="form-control" value="{{user.email}}"><br>
+        <label for"inputUsername">Username</label>
+        <input type="username" name="username" id="inputUsername" class="form-control" value="{{user.username}}"><br>
+        <label for="inputPassword">Password</label>
+        <label type="password" name="password" id="inputPassword" class="form-control">
+    </form><br><br><br><br>
+    
+   <button class="btn btn-lg btn-primary" type="submit">
+        Conformar ajustes
+    </button>
 {% endblock %}
