--- a/templates/perfil/perfil.html.twig
+++ b/templates/perfil/perfil.html.twig
@@ -66,7 +66,12 @@
   </tbody>
 </table> 
 
-<a class="bhtn btn-lg btn-primary" type="submit" href="{{path('miequipo')}}">Mi Equipo</a>
+{#{% if equipos %}
+  {% for equipo in equipos %}#}
+    <a class="bhtn btn-lg btn-primary" type="submit" href="{{path('miequipo')}}">Mi Equipo</a>
+    <a class="bhtn btn-lg btn-primary" type="submit" href="{{path('miequipo')}}">Abandonar Equipo</a>
+{#}  {% endfor %}
+{% endif %}#}
 {% if users %}
   {% for user in users %}
     <a class="bhtn btn-lg btn-primary" type="submit" href="{{path('ajustes', {'id': user.id})}}">Editar perfil</a>
