--- a/templates/equipo/miequipo.html.twig
+++ b/templates/equipo/miequipo.html.twig
@@ -26,6 +26,7 @@
           {#td>{{equipo.foto}}</td>#}
           <td>><a href="{{path('equipo_show', {'nombre': equipo.nombre})}}">{{equipo.nombre}}</a></td>
           <td>{{equipo.director}}</td>
+          <td><a class="btn btn-lg btn-primary" href="{{path('join', {'id': equipo.id})}}">Unirse</a></td>
           <th scope="col"></th>
           {#<td>{{equipo.miembros}}</td>Error array to string conversion
           <td>{{equipo.competicionesapuntadas}}</td>
