--- a/templates/campeonatos/new.html.twig
+++ b/templates/campeonatos/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('campeonatos/_form.html.twig') }}
 
-    <a href="{{ path('campeonatos_index') }}">back to list</a>
+    <a class="btn btn-lg btn-primary" type="submit"  href="{{ path('campeonatos_index') }}">back to list</a>
 {% endblock %}
