funcion "misCampeonatos" en Perfil controler (muestra los campeonatos creados por el usuario loggeado)

--- a/templates/campeonatos/show.html.twig
+++ b/templates/campeonatos/show.html.twig
@@ -59,7 +59,7 @@
 
     <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_index') }}">back to list</a>
 
-    <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_edit', {'id': campeonato.id}) }}">edit</a>
+    <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_edit', {'id': campeonato.id}) }}">Editar</a>
 
     {{ include('campeonatos/_delete_form.html.twig') }}
 {% endblock %}
