--- a/templates/perfil/misCampeonatos.html.twig
+++ b/templates/perfil/misCampeonatos.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SES{% endblock %}
+{% block title %}Mis Campeonatos{% endblock %}
 
 {% block body %}
-<h4>Campeonatos</h4>
+    <h4>Mis Campeonatos</h4>
 <table class="table table-hover">
     <thead>
         <tr class="table-info">
             <th scope="col">CAMPEONATO</th>
             <th scope="col">JUEGO</th>
-            <th scope="col">INFO</th>
+            <th scope="col"></th>
             <th scope="col"></th>
         </tr>
     </thead>
@@ -19,16 +19,13 @@
             <tr>
                 <td>{{campeonato.campeonatoNombre}}</td>
                 <td>{{campeonato.juego}}</td>
-                <td><a href="{{path('campeonato_info', {'id': campeonato.id})}}">Info.</a></td>
-                <td><a class="bhtn btn-lg btn-primary" href="{{path('inscripcionCampeonato', {'id': campeonato.id})}}">Inscribirse.</a></td>
+                <td><a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_edit', {'id': campeonato.id}) }}">Editar</a></td>
+                <td></td>
             </tr>
         {% endfor %}
     {% else %}
-        <p>No hay competiciones ahora</p>
+        <p>No has creado ningún campeonato por ahora</p>
     {% endif %}
 </table>
 
-<br><br>
-
-    <a class="bhtn btn-lg btn-primary" tyoe="submit" href="{{path('nuveoCampeonato')}}">Crear Campeonato</a>
 {% endblock %}
