--- a/templates/perfil/perfil.html.twig
+++ b/templates/perfil/perfil.html.twig
@@ -78,7 +78,8 @@
   {% endfor %}
 {% endif %}
 
-
+    <a class="bhtn btn-lg btn-primary" type="submit" href="{{path('misCampeonatos')}}">Mis Campeonatos</a>
+ 
 {#<a class="btn btn-lg btn-primary" type="submit" href="{{ path('equipo_new') }}">Mi Equipo</a>
 {% if users  %}
   {% for user in users %}
