campeonato pruebas, mis campeonatos y css

--- a/templates/perfil/perfil.html.twig
+++ b/templates/perfil/perfil.html.twig
@@ -20,7 +20,7 @@
       {% for user in users %}
         <td>{{user.email}}</td>
         <td>{{user.username}}</td>
-        <td></td>
+        <td>{{user.equipo}}</td>
       {% endfor %}
     {% else %}
       <td>no data</td>
