--- a/templates/campeonatos/edit.html.twig
+++ b/templates/campeonatos/edit.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Campeonatos{% endblock %}
+{% block title %}Editar Campeonato{% endblock %}
 
 {% block body %}
     <h1>Edit Campeonatos</h1>
 
     {{ include('campeonatos/_form.html.twig', {'button_label': 'Update'}) }}
 
+    <a class="btn btn-lg btn-primary" type"=submit" href="{{path('campeonatos_pruebas', {'id': campeonato.id}) }}">Añadir pruebas</a>
     <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_index') }}">back to list</a>
 
     {{ include('campeonatos/_delete_form.html.twig') }}
