--- a/templates/campeonatos/show.html.twig
+++ b/templates/campeonatos/show.html.twig
@@ -16,6 +16,10 @@
                <td>{{ campeonato.campeonatoNombre }}</td>
             </tr>
             <tr>
+                <th>Descripción</th>
+                <td>{{campeonato.descripcion}}</td>
+            </tr>
+            <tr>
                 <th>Admin</th>
                <td>{{ campeonato.admin }}</td>
             </tr>
@@ -34,17 +38,17 @@
             
             <tr>
                 <th>Participantes</th>
-                {% if participaciones %}
+                {#{% if participaciones %}
                     {% for participantes in participaciones %}
-                    {#{% if participaciones.user is defined and participaciones.user is not null%}
+                    {% if participaciones.user is defined and participaciones.user is not null%}
                     {% for object campeonato %}
                         {% for campeonato in object.participantes %}
                             <ul>{{ participaciones.user }}</ul>
                         {% endfor %}
                         {% endfor %}
-                    {% endif %}#}
+                    {% endif %}
                     {% endfor %}
-                {% endif %}
+                {% endif %}#}
             </tr>
         </tbody>
     </table>
@@ -58,8 +62,6 @@
     </table>
 
     <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_index') }}">back to list</a>
-
-    <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_edit', {'id': campeonato.id}) }}">Editar</a>
-
+    
     {{ include('campeonatos/_delete_form.html.twig') }}
 {% endblock %}
