--- a/templates/campeonatos/edit.html.twig
+++ b/templates/campeonatos/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('campeonatos/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a class="btn btn-lg btn-primary" type"=submit" href="{{path('campeonatos_pruebas', {'id': campeonato.id}) }}">Añadir pruebas</a>
+    <a class="btn btn-lg btn-primary" type"=submit" href="{{path('campeonato_pruebas', {'id': campeonato.id}) }}">Añadir pruebas</a>
     <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_index') }}">back to list</a>
 
     {{ include('campeonatos/_delete_form.html.twig') }}
