--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,15 @@
 body {
     background-color: rgb(22, 13, 21);
 }
+
+.form-group{
+    width: 60%;
+}
+
+#inputEmail, #inputPassword{
+    width: 20%;
+}
+
+#campeonato_campeonato_nombre, #campeonato_juego{
+    width: 30%;
+}
