--- a/templates/campeonatos/show.html.twig
+++ b/templates/campeonatos/show.html.twig
@@ -36,20 +36,19 @@
                 <td>{{ campeonato.juego }}</td>
             </tr>
             
-            {#<tr>
+            <tr>
                 <th>Participantes</th>
+                {{ dump(participaciones) }}
                 {% if participaciones %}
                     {% for participantes in participaciones %}
-                    {% if participaciones.user is defined and participaciones.user is not null%}
-                    {% for object campeonato %}
-                        {% for campeonato in object.participantes %}
-                            <ul>{{ participaciones.user }}</ul>
-                        {% endfor %}
-                        {% endfor %}
-                    {% endif %}
+                        {% if users %}
+                            {% for user in users %}
+                                {#<td><ul>{{user.username}}</ul></td>#} 
+                            {% endfor %}
+                        {% endif %}
                     {% endfor %}
                 {% endif %}
-            </tr>#}
+            </tr>
             {#<tr>
                 <th>Pruebas</th>
                 <td>{{ campeonato.pruebas }}</td>
