--- a/templates/campeonatos/show.html.twig
+++ b/templates/campeonatos/show.html.twig
@@ -9,7 +9,7 @@
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ campeonato.id }}</td>
+                <td>{{ campeonato.id }}</td>  
             </tr>
             <tr>
                 <th>Campeonato</th>
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Admin</th>
-               <td>{{ campeonato.admin }}</td>
+                <td>{{ campeonato.admin }}</td>
             </tr>
             <tr>
                 <th>Fecha Inicio</th>
@@ -38,16 +38,13 @@
             
             <tr>
                 <th>Participantes</th>
-                {{ dump(participaciones) }}
-                {% if participaciones %}
-                    {% for participantes in participaciones %}
+                    {% if participaciones %}
                         {% if users %}
-                            {% for user in users %}
-                                {#<td><ul>{{user.username}}</ul></td>#} 
+                            {% for user in participaciones %}
+                                <td>{{user.username}}</td> 
                             {% endfor %}
-                        {% endif %}
-                    {% endfor %}
-                {% endif %}
+                        {% endif %}     
+                    {% endif %}
             </tr>
             {#<tr>
                 <th>Pruebas</th>
@@ -58,6 +55,7 @@
     
 
     <a class="btn btn-lg btn-primary" type="submit" href="{{ path('campeonatos_index') }}">back to list</a>
+    <a class="btn btn-lg btn-primary" type="submit" href="{{ path('misCampeonatos') }}">Mis Campeonatos</a>
     
     {{ include('campeonatos/_delete_form.html.twig') }}
 {% endblock %}
