--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -7,7 +7,7 @@
     <legend>SES-Login</legend>
     
 {{ form_start(form) }}
-    <div class="form-group row">
+    <div id="register" class="form-group row">
     <label class="col-sm-2 col-form-label">{{ form_row(form.username) }}</label>
     </div>
     <div class="form-group row">
