--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,5 +41,6 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+    <a class="btn btn-link" href="{{path ('app_forgot_password_request')}}">Olvidaste la contraseña</a>
 </form>
 {% endblock %}
