cosas de mail de confirmacion

--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -23,7 +23,7 @@
         <a class="nav-link" href="{{ path('app_logout') }}">LogOut</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ path('user_registration')}}">Register</a>
+        <a class="nav-link" href="{{ path('app_register')}}">Register</a>
       </li>
     </ul>
   </div>
