--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,12 +10,17 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+    <div id="register" class="form-group row">
+    <label class="col-sm-2 col-form-label">{{ form_row(registrationForm.username) }}</label>
+    </div>
+    <div class="form-group row">
+    <label class="col-sm-2 col-form-label">{{ form_row(registrationForm.email) }}</label>
+    </div>
+    <div class="form-group row">
+    <label class="col-sm-2 col-form-label">{{ form_row(registrationForm.plainPassword.first) }}</labeL>
+    </div>
+    <div class="form-group row">
+    <label class="col-sm-2 col-form-label">{{ form_row(registrationForm.plainPassword.second) }}</label>
+    </div>
     {{ form_end(registrationForm) }}
 {% endblock %}
